<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/first_fragment_xml_linearlayout_scene">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:alpha="0.5"
                android:clickable="true"
                android:contentDescription="@string/img_content_description2"
                android:focusable="true"
                android:src="@drawable/background_wallpaper"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.cardview.widget.CardView
                android:id="@+id/imageView2"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/img_content_description3"
                    android:src="@drawable/my_photo_v3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_my_name"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@id/position"
                app:layout_constraintStart_toStartOf="@id/guideLine"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_position"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/imageView2"
                app:layout_constraintStart_toStartOf="@id/guideLine"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideHorizontalLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <Button
                android:id="@+id/sendEmailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/butt_email"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideLine" />

            <Button
                android:id="@+id/callPhoneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="invisible"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/butt_phone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.motion.widget.MotionLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>